chore(components): update new item creation marker popup.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,26 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.leaflet-popup-content {
+  min-width: 240px !important;
+}
+
+.leaflet-popup-content-wrapper {
+  padding: 1px !important; /* Mantenemos un pequeño padding */
+}
+
+/* Asegurarnos que el botón de cierre se mantenga visible y en su posición */
+.leaflet-popup-close-button {
+  position: absolute !important;
+  right: 0 !important;
+  top: 0 !important;
+  padding: 4px 4px 0 0 !important;
+}
+
+/* Opcional: si quieres mejorar el aspecto general del popup */
+.leaflet-popup-content-wrapper, 
+.leaflet-popup-tip {
+  background: white !important;
+  box-shadow: 0 3px 14px rgba(0,0,0,0.2) !important;
+}
